--- a/src/Components/Todo.css
+++ b/src/Components/Todo.css
@@ -10,6 +10,41 @@
   flex-direction: column;
   gap: 20px;
   padding: 30px 0 30px 0;
+  position: relative;
+}
+/* nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: aqua;
+} */
+.menu-icon {
+  display: none;
+  position: absolute;
+  right: 30px;
+  top: 30px;
+}
+.details {
+  transform-origin: 100% 0%;
+  z-index: 9999;
+  position: absolute;
+  right: 30px;
+  top: 30px;
+  background-color: white;
+  height: 10rem;
+  width: 15rem;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 15px;
+  transition: all 300ms ease-in-out;
+  padding: 1.5rem;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px,
+    rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px,
+    rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
 }
 .buttons {
   display: flex;
@@ -36,14 +71,7 @@
   background-color: rgb(218, 218, 218) !important;
   color: black !important;
 }
-.buttons button:hover {
-  background-color: #5887ff;
-  color: #ffffff;
-  font-size: 17px;
-  font-weight: 500;
-  transform: scale(1.05);
-  transition: 0.2s ease-in;
-}
+
 .buttons > span {
   width: 50px;
   height: 50px;
@@ -153,6 +181,9 @@
     display: block;
     color: rgb(150, 150, 150);
   }
+  .buttons button:hover {
+    transform: scale(1);
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 991px) {
@@ -183,5 +214,16 @@
     width: 35px;
     height: 35px;
     font-size: 14px;
+  }
+}
+
+@media (min-width: 1366px) and (max-width: 1600px) {
+  .buttons button:hover {
+    background-color: #5887ff;
+    color: #ffffff;
+    font-size: 17px;
+    font-weight: 500;
+    transform: scale(1.05);
+    transition: 0.2s ease-in;
   }
 }
