--- a/src/Components/Todo.css
+++ b/src/Components/Todo.css
@@ -20,21 +20,22 @@
   background-color: aqua;
 } */
 .menu-icon {
-  display: none;
+  display: block;
   position: absolute;
   right: 30px;
   top: 30px;
 }
 .details {
   transform-origin: 100% 0%;
+  /* scale: 1; */
   z-index: 9999;
   position: absolute;
-  right: 30px;
-  top: 30px;
+  right: 50px;
+  top: 50px;
   background-color: white;
   height: 10rem;
   width: 15rem;
-  display: none;
+  display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
